# bulletproof_bt

./: README.md  pyproject.toml
configs/: engine.yaml  exec.yaml
docs/: audit.md  bulletproof_exec_integration_memo.md  bybit_adapter_contract.md  bybit_live_hardening_contract.md  cleanup_experiment_runs.md  core_contract.md  diagnostic_input_matrix.md  engine-diagnostic-emission-contract.md  engine_input_contract.md  exec_artifacts_contract.md  exec_contract.md  exec_reconciliation_contract.md  exec_restart_recovery_contract.md  experiment_dataset_builder.md  h1_strategy_suite.md  hypothesis_contract.md  l1_h10_diagnostics.md  l1_h10_parent_family.md  l1_h10a_mean_reversion_small_tp.md  l1_h10b_breakout_scalping.md  l1_h11_diagnostics.md  l1_h11_parent_family.md  l1_h11a_quality_filtered_continuation.md  l1_h11b_pullback_geometry_impulse.md  l1_h11c_protection_discipline.md  l1_h1_vol_floor_trend.md  l1_h1b_salvage.md  l1_h1c_volfloor_ema_pullback.md  l1_h2b_confirmed_fade.md  l1_h3b_har_rv_gate_mean_reversion.md  l1_h4a_liquidity_gate_mean_reversion.md  l1_h5a_vol_managed_trend.md  l1_h5b_vol_managed_har_trend.md  l1_h6a_vov_gate_mean_reversion.md  l1_h8_diagnostics.md  l1_h8_parent.md  l1_h8a.md  l1_h8b.md  l1_h8c.md  l1_h8d.md  (+7 more)
orchestrator/: README_daemon.md  README_dashboard.md  alpha_zoo.py  daemon_config.yaml  db.py  init_research_db.py  interpret_experiment_results.py  queue_hypothesis.py  research_daemon.py  research_db_schema.sql  run_dashboard.py  run_experiment_pipeline.py  state_discovery.py  state_discovery_config.yaml  validate_hypothesis_logging.py
(+408 files in other folders)
